--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"devDependencies": {
 		"@graphql-codegen/cli": "^4.0.1",
 		"@graphql-codegen/client-preset": "^4.0.1",
+		"@graphql-typed-document-node/core": "^3.2.0",
 		"@tailwindcss/typography": "^0.5.9",
 		"@types/react-dom": "^18.2.6",
 		"@typescript-eslint/eslint-plugin": "^5.60.1",
