--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
 		"@graphql-codegen/client-preset": "^4.0.1",
 		"@graphql-typed-document-node/core": "^3.2.0",
 		"@tailwindcss/typography": "^0.5.9",
+		"@types/negotiator": "^0.6.1",
 		"@types/react-dom": "^18.2.6",
-		"@typescript-eslint/eslint-plugin": "^5.60.1",
-		"@typescript-eslint/parser": "^5.60.1",
+		"@typescript-eslint/eslint-plugin": "^5.61.0",
+		"@typescript-eslint/parser": "^5.61.0",
 		"@vercel/node": "^2.15.3",
 		"babel-eslint": "^10.1.0",
 		"dotenv": "^16.3.1",
 		"encoding": "^0.1.13",
-		"eslint": "^8.43.0",
-		"eslint-config-next": "^13.4.7",
+		"eslint": "^8.44.0",
+		"eslint-config-next": "^13.4.8",
 		"eslint-config-react-app": "^7.0.1",
 		"eslint-plugin-flowtype": "^8.0.3",
 		"eslint-plugin-import": "^2.27.5",
@@ -39,26 +40,27 @@
 		"typescript": "^5.1.6"
 	},
 	"dependencies": {
+		"@contentful/rich-text-html-renderer": "^16.1.0",
 		"@contentful/rich-text-react-renderer": "^15.17.0",
+		"@formatjs/intl-localematcher": "^0.4.0",
 		"@heroicons/react": "^2.0.18",
 		"@icons-pack/react-simple-icons": "8.0.1",
-		"@next/bundle-analyzer": "^13.4.7",
+		"@next/bundle-analyzer": "^13.4.8",
 		"@react-pdf/renderer": "3.1.12",
 		"@react-spring/web": "^9.7.3",
-		"@types/google-spreadsheet": "^3.3.2",
-		"@types/node": "^20.3.2",
+		"@types/node": "^20.3.3",
 		"@types/react": "^18.2.14",
 		"@vercel/kv": "^0.2.2",
-		"ai": "^2.1.12",
+		"ai": "^2.1.14",
 		"autoprefixer": "^10.4.14",
 		"framer-motion": "^10.12.18",
-		"google-spreadsheet": "^3.3.0",
 		"graphql": "^16.7.1",
 		"graphql-request": "^6.1.0",
-		"next": "^13.4.7",
+		"negotiator": "^0.6.3",
+		"next": "^13.4.8",
 		"next-seo": "^6.1.0",
 		"openai": "^3.3.0",
-		"openai-edge": "^1.1.0",
+		"openai-edge": "^1.1.1",
 		"postcss": "^8.4.24",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
