--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --show-all --turbo",
+		"dev": "next dev --show-all",
 		"build": "next build",
 		"start": "next start",
 		"tsc": "tsc --noEmit",
@@ -13,9 +13,9 @@
 	"devDependencies": {
 		"@tailwindcss/typography": "^0.5.9",
 		"@types/react-dom": "^18.2.6",
-		"@typescript-eslint/eslint-plugin": "^5.60.0",
-		"@typescript-eslint/parser": "^5.60.0",
-		"@vercel/node": "^2.15.2",
+		"@typescript-eslint/eslint-plugin": "^5.60.1",
+		"@typescript-eslint/parser": "^5.60.1",
+		"@vercel/node": "^2.15.3",
 		"babel-eslint": "^10.1.0",
 		"eslint": "^8.43.0",
 		"eslint-config-next": "^13.4.7",
@@ -35,14 +35,15 @@
 		"@next/bundle-analyzer": "^13.4.7",
 		"@react-pdf/renderer": "3.1.12",
 		"@react-spring/web": "^9.7.3",
-		"@types/google-spreadsheet": "^3.3.2",
-		"@types/node": "^20.3.1",
+		"@types/node": "^20.3.2",
 		"@types/react": "^18.2.14",
 		"@vercel/kv": "^0.2.2",
-		"ai": "^2.1.8",
+		"ai": "^2.1.10",
 		"autoprefixer": "^10.4.14",
 		"framer-motion": "^10.12.17",
-		"google-spreadsheet": "^3.3.0",
+		"gaxios": "^5.1.2",
+		"google-spreadsheet": "^4.0.2",
+		"https": "^1.0.0",
 		"next": "^13.4.7",
 		"next-seo": "^6.1.0",
 		"openai": "^3.3.0",
@@ -54,7 +55,7 @@
 		"react-use": "^17.4.0",
 		"schema-dts": "^1.1.2",
 		"tailwindcss": "^3.3.2",
-		"typescript": "^5.1.3",
+		"typescript": "^5.1.6",
 		"typewriter-effect": "^2.20.1",
 		"xss": "^1.0.14"
 	},
