--- a/package.json
+++ b/package.json
@@ -3,22 +3,31 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --show-all --turbo",
+		"dev": "next dev --show-all",
 		"build": "next build",
 		"start": "next start",
 		"tsc": "tsc --noEmit",
 		"lint": "next lint",
-		"format": "prettier --write \"**/*.{js,ts,tsx,md}\""
+		"format": "prettier --write \"**/*.{js,ts,tsx,md}\"",
+		"generate": "graphql-codegen",
+		"prestart": "pnpm generate",
+		"predev": "pnpm generate"
 	},
 	"devDependencies": {
+		"@graphql-codegen/cli": "^4.0.1",
+		"@graphql-codegen/client-preset": "^4.0.1",
+		"@graphql-typed-document-node/core": "^3.2.0",
 		"@tailwindcss/typography": "^0.5.9",
+		"@types/negotiator": "^0.6.1",
 		"@types/react-dom": "^18.2.6",
-		"@typescript-eslint/eslint-plugin": "^5.60.0",
-		"@typescript-eslint/parser": "^5.60.0",
-		"@vercel/node": "^2.15.2",
+		"@typescript-eslint/eslint-plugin": "^5.61.0",
+		"@typescript-eslint/parser": "^5.61.0",
+		"@vercel/node": "^2.15.3",
 		"babel-eslint": "^10.1.0",
-		"eslint": "^8.43.0",
-		"eslint-config-next": "^13.4.7",
+		"dotenv": "^16.3.1",
+		"encoding": "^0.1.13",
+		"eslint": "^8.44.0",
+		"eslint-config-next": "^13.4.9",
 		"eslint-config-react-app": "^7.0.1",
 		"eslint-plugin-flowtype": "^8.0.3",
 		"eslint-plugin-import": "^2.27.5",
@@ -26,35 +35,40 @@
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-simple-import-sort": "^10.0.0",
-		"prettier": "^2.8.8",
-		"prettier-plugin-tailwindcss": "^0.3.0"
+		"prettier": "^3.0.0",
+		"prettier-plugin-tailwindcss": "^0.3.0",
+		"typescript": "^5.1.6"
 	},
 	"dependencies": {
+		"@contentful/rich-text-html-renderer": "^16.1.0",
+		"@contentful/rich-text-react-renderer": "^15.17.0",
+		"@contentful/rich-text-types": "^16.2.0",
+		"@formatjs/intl-localematcher": "^0.4.0",
 		"@heroicons/react": "^2.0.18",
 		"@icons-pack/react-simple-icons": "8.0.1",
-		"@next/bundle-analyzer": "^13.4.7",
+		"@next/bundle-analyzer": "^13.4.9",
 		"@react-pdf/renderer": "3.1.12",
 		"@react-spring/web": "^9.7.3",
-		"@types/google-spreadsheet": "^3.3.2",
-		"@types/node": "^20.3.1",
+		"@types/node": "^20.4.1",
 		"@types/react": "^18.2.14",
 		"@vercel/kv": "^0.2.2",
-		"ai": "^2.1.8",
+		"ai": "^2.1.17",
 		"autoprefixer": "^10.4.14",
-		"framer-motion": "^10.12.17",
-		"google-spreadsheet": "^3.3.0",
-		"next": "^13.4.7",
+		"framer-motion": "^10.12.18",
+		"graphql": "^16.7.1",
+		"graphql-request": "^6.1.0",
+		"negotiator": "^0.6.3",
+		"next": "^13.4.9",
 		"next-seo": "^6.1.0",
 		"openai": "^3.3.0",
-		"openai-edge": "^1.1.0",
-		"postcss": "^8.4.24",
+		"openai-edge": "^1.2.0",
+		"postcss": "^8.4.25",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-error-boundary": "^4.0.10",
 		"react-use": "^17.4.0",
 		"schema-dts": "^1.1.2",
 		"tailwindcss": "^3.3.2",
-		"typescript": "^5.1.3",
 		"typewriter-effect": "^2.20.1",
 		"xss": "^1.0.14"
 	},
