--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,10 @@
 name: Lighthouse CI
-on: push
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+
 jobs:
   types:
     runs-on: ubuntu-latest
@@ -23,6 +28,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - uses: oven-sh/setup-bun@v1
 
       - name: Install Dependencies
         run: bun install --frozen-lockfile
