--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/parser": "^6.7.2",
     "@vercel/node": "^3.0.5",
     "babel-eslint": "^10.1.0",
+    "bun-types": "^1.0.2",
     "dotenv": "^16.3.1",
     "encoding": "^0.1.13",
     "eslint": "^8.49.0",
