--- a/package.json
+++ b/package.json
@@ -13,61 +13,61 @@
 		"generate": "graphql-codegen"
 	},
 	"devDependencies": {
-		"@graphql-codegen/cli": "^5.0.2",
-		"@graphql-codegen/client-preset": "^4.2.6",
+		"@graphql-codegen/cli": "^5.0.5",
+		"@graphql-codegen/client-preset": "^4.7.0",
 		"@graphql-typed-document-node/core": "^3.2.0",
 		"@tailwindcss/typography": "^0.5.13",
 		"@types/negotiator": "^0.6.3",
-		"@types/react-dom": "^18.3.0",
-		"@typescript-eslint/eslint-plugin": "^7.10.0",
-		"@typescript-eslint/parser": "^7.10.0",
-		"@vercel/node": "^3.1.5",
+		"@types/react-dom": "^19.0.4",
+		"@typescript-eslint/eslint-plugin": "^8.27.0",
+		"@typescript-eslint/parser": "^8.27.0",
+		"@vercel/node": "^5.1.14",
 		"babel-eslint": "^10.1.0",
-		"bun-types": "^1.1.9",
-		"dotenv": "^16.4.5",
+		"bun-types": "^1.2.5",
+		"dotenv": "^16.4.7",
 		"encoding": "^0.1.13",
 		"eslint": "^8.54.0",
-		"eslint-config-next": "^14.2.3",
+		"eslint-config-next": "^15.2.3",
 		"eslint-config-react-app": "^7.0.1",
 		"eslint-plugin-flowtype": "^8.0.3",
-		"eslint-plugin-import": "^2.29.1",
-		"eslint-plugin-jsx-a11y": "^6.8.0",
-		"eslint-plugin-react": "^7.34.1",
-		"eslint-plugin-react-hooks": "^4.6.2",
-		"eslint-plugin-simple-import-sort": "^12.1.0",
-		"prettier": "^3.2.5",
-		"prettier-plugin-tailwindcss": "^0.5.14",
-		"typescript": "^5.4.5"
+		"eslint-plugin-import": "^2.31.0",
+		"eslint-plugin-jsx-a11y": "^6.10.2",
+		"eslint-plugin-react": "^7.37.4",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-simple-import-sort": "^12.1.1",
+		"prettier": "^3.5.3",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"typescript": "^5.8.2"
 	},
 	"dependencies": {
-		"@contentful/rich-text-html-renderer": "^16.4.0",
-		"@contentful/rich-text-react-renderer": "^15.20.0",
-		"@contentful/rich-text-types": "^16.4.0",
-		"@formatjs/intl-localematcher": "^0.5.4",
-		"@heroicons/react": "^2.1.3",
-		"@icons-pack/react-simple-icons": "9.5.0",
-		"@next/bundle-analyzer": "^14.2.3",
-		"@radix-ui/react-tooltip": "^1.0.7",
-		"@react-pdf/renderer": "3.4.4",
-		"@react-spring/web": "^9.7.3",
-		"@types/node": "^20.12.12",
-		"@types/react": "^18.3.2",
-		"@vercel/kv": "^1.0.1",
+		"@contentful/rich-text-html-renderer": "^17.0.0",
+		"@contentful/rich-text-react-renderer": "^16.0.1",
+		"@contentful/rich-text-types": "^17.0.0",
+		"@formatjs/intl-localematcher": "^0.6.1",
+		"@heroicons/react": "^2.2.0",
+		"@next/bundle-analyzer": "^15.2.3",
+		"@radix-ui/react-tooltip": "^1.1.8",
+		"@react-pdf/renderer": "4.3.0",
+		"@react-spring/web": "9.7.3",
+		"@remixicon/react": "^4.6.0",
+		"@types/node": "^22.13.12",
+		"@types/react": "^19.0.12",
+		"@vercel/kv": "^3.0.0",
 		"ai": "3.1.12",
-		"autoprefixer": "^10.4.19",
-		"framer-motion": "^10.16.5",
-		"graphql": "^16.8.1",
-		"graphql-request": "^7.0.1",
-		"negotiator": "^0.6.3",
-		"next": "14.2.3",
-		"next-seo": "^6.5.0",
+		"autoprefixer": "^10.4.21",
+		"framer-motion": "^12.5.0",
+		"graphql": "^16.10.0",
+		"graphql-request": "^7.1.2",
+		"negotiator": "^1.0.0",
+		"next": "15.2.3",
+		"next-seo": "^6.6.0",
 		"openai": "4.47.1",
-		"postcss": "^8.4.38",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
-		"react-error-boundary": "^4.0.13",
-		"react-use": "^17.5.0",
-		"schema-dts": "^1.1.2",
+		"postcss": "^8.5.3",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-error-boundary": "^5.0.0",
+		"react-use": "^17.6.0",
+		"schema-dts": "^1.1.5",
 		"tailwindcss": "^3.4.3",
 		"typewriter-effect": "^2.21.0",
 		"xss": "^1.0.15"
