--- a/package.json
+++ b/package.json
@@ -23,17 +23,18 @@
 		"@typescript-eslint/parser": "^8.31.0",
 		"@vercel/node": "^5.1.14",
 		"babel-eslint": "^10.1.0",
+		"babel-plugin-react-compiler": "^19.1.0-rc.1",
 		"bun-types": "^1.2.10",
 		"dotenv": "^16.5.0",
 		"encoding": "^0.1.13",
-		"eslint": "^8.54.0",
+		"eslint": "^9.25.1",
 		"eslint-config-next": "^15.3.1",
 		"eslint-config-react-app": "^7.0.1",
 		"eslint-plugin-flowtype": "^8.0.3",
 		"eslint-plugin-import": "^2.31.0",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
 		"eslint-plugin-react": "^7.37.5",
-		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-react-hooks": "6.0.0-rc.1",
 		"eslint-plugin-simple-import-sort": "^12.1.1",
 		"prettier": "^3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
