--- a/package.json
+++ b/package.json
@@ -50,11 +50,11 @@
 		"@react-pdf/renderer": "4.3.0",
 		"@react-spring/web": "9.7.5",
 		"@remixicon/react": "^4.6.0",
+		"@tailwindcss/postcss": "^4.1.4",
 		"@types/node": "^22.15.2",
 		"@types/react": "^19.1.2",
 		"@vercel/kv": "^3.0.0",
 		"ai": "3.1.12",
-		"autoprefixer": "^10.4.21",
 		"framer-motion": "^12.9.1",
 		"graphql": "^16.10.0",
 		"graphql-request": "^7.1.2",
@@ -68,7 +68,7 @@
 		"react-error-boundary": "^5.0.0",
 		"react-use": "^17.6.0",
 		"schema-dts": "^1.1.5",
-		"tailwindcss": "^3.4.3",
+		"tailwindcss": "^4.1.4",
 		"typewriter-effect": "^2.21.0",
 		"xss": "^1.0.15"
 	},
