--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,5 +1,8 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.1.4/schema.json",
   "extends": ["ultracite"],
-  "formatter": { "indentStyle": "tab" }
+  "formatter": { "indentStyle": "tab" },
+  "files": {
+    "includes": ["**", "!gql/**", "!public/**"]
+  }
 }
