--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@graphql-codegen/client-preset": "^4.8.3",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/bun": "latest",
     "@types/negotiator": "^0.6.4",
     "@types/react-dom": "^19.1.7",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
@@ -24,7 +25,7 @@
     "@vercel/node": "^5.3.11",
     "babel-eslint": "^10.1.0",
     "babel-plugin-react-compiler": "^19.1.0-rc.2",
-    "bun-types": "^1.2.20",
+    "bun-types": "^1.3.2",
     "dotenv": "^17.2.1",
     "encoding": "^0.1.13",
     "eslint": "^9.33.0",
@@ -37,8 +38,7 @@
     "eslint-plugin-react-hooks": "6.0.0-rc.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "typescript": "^5.9.2",
-    "ultracite": "5.1.2",
-    "@types/bun": "latest"
+    "ultracite": "5.1.2"
   },
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^17.1.0",
