--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "tsc": "tsc --noEmit",
+    "tsc": "next typegen && tsc --noEmit",
     "lint": "bun lint:eslint && bun lint:biome",
     "lint:eslint": "eslint .",
     "lint:biome": "biome check",
