--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "tsc": "tsc --noEmit",
-    "lint": "eslint .",
+    "tsc": "next typegen && tsc --noEmit",
+    "lint": "bun lint:eslint && bun lint:biome",
+    "lint:eslint": "eslint .",
+    "lint:biome": "biome check",
     "format": "biome format --write",
     "generate": "graphql-codegen"
   },
