--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,11 +1,6 @@
 {
   "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
-  "extends": [
-    "ultracite",
-    "ultracite/core",
-    "ultracite/react",
-    "ultracite/next"
-  ],
+  "extends": ["ultracite/core", "ultracite/react", "ultracite/next"],
   "formatter": {
     "indentStyle": "tab"
   },
