--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "tsc": "next typegen && tsc --noEmit",
-    "lint": "bun lint:eslint && bun lint:biome",
+    "lint": "bun lint:biome && bun lint:eslint",
     "lint:eslint": "eslint .",
     "lint:biome": "biome check",
     "format": "biome format --write",
@@ -24,7 +24,7 @@
     "@types/react-dom": "19.2.3",
     "@typescript-eslint/eslint-plugin": "^8.47.0",
     "@typescript-eslint/parser": "^8.47.0",
-    "@vercel/node": "^5.5.6",
+    "@vercel/node": "^5.5.7",
     "babel-eslint": "^10.1.0",
     "babel-plugin-react-compiler": "^1.0.0",
     "bun-types": "^1.3.2",
@@ -51,20 +51,20 @@
     "@next/bundle-analyzer": "16.0.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-pdf/renderer": "4.3.1",
-    "@react-spring/web": "9.7.5",
+    "@react-spring/web": "10.0.3",
     "@remixicon/react": "^4.7.0",
     "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^24.10.1",
     "@types/react": "19.2.6",
     "@vercel/kv": "^3.0.0",
-    "ai": "3.1.12",
+    "ai": "5.0.97",
     "framer-motion": "^12.23.24",
     "graphql": "^16.12.0",
     "graphql-request": "^7.3.4",
     "negotiator": "^1.0.0",
     "next": "16.0.3",
     "next-seo": "^7.0.1",
-    "openai": "5.12.2",
+    "openai": "6.9.1",
     "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
